@@ -2,6 +2,7 @@ prometheus-node-exporter (0.16.0+ds-1~bpo9+1) UNRELEASED; urgency=medium
 
   * Rebuild for stretch-backports.
   * debian/gbp.conf: Set debian-branch for BPO.
+  * debian/rules:Remove vendored file left by mistake.
 
  -- Martín Ferrari <tincho@debian.org>  Wed, 20 Jun 2018 10:49:42 +0000
 
